# gog-os

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/commands/: account-add.md  account-alias.md  account-list.md  account-migrate.md  account-remove.md  calendar-brief.md  email-apply.md  email-loop.md  email-report.md  email-undo.md  end-day.md  log.md  login-google.md  logout-google.md  morning-brief.md  news-brief.md  schedule-morning.md  setup-check.md  start-day.md
.core/config/: accounts.example.json
docs/: ARCHITECTURE.md  CHECKLIST.md  CLAUDE_CODE_START_PROMPTS.md  CONNECTOR_CONTRACT.md  EMAILOS.md  EMAILOS_AUTOMATION.md  GOOGLE_INTEGRATIONS.md  IMPLEMENTATION_PLAN.md  MODEL_USAGE.md  PRD.md  SECURITY.md
docs/modules/: 01_foundationos.md  02_emailos.md  03_calendaros.md  04_taskos.md  05_briefingos.md  06_activityos.md  07_reflectionos.md  08_newsos.md  09_learningos.md  10_healthos.md  11_contentos_bridge.md  (+1 more)
gogos/: paths.py
gogos.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_account_mgmt.py  test_account_path_consistency.py  test_accounts.py  test_calendar_fetch.py  test_calendar_normalise.py  test_calendar_report.py  test_gmail_apply.py  test_gmail_classify.py  test_gmail_fetch.py  test_gmail_ledger.py  test_gmail_loop.py  test_gmail_normalise.py  test_gmail_reconcile.py  test_gmail_report.py  test_gmail_rules.py  test_gmail_triage.py  test_gmail_undo.py  test_google_auth.py  test_logout.py  test_paths.py  test_scheduler.py  test_setup_check.py  test_start_day.py
(+41 files in other folders)
